# winter-lily

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build-usi-lib.rs  build.sh  clean.sh  debug-local.sh  debug-winter.gdb  install.sh  local-env.sh  new-subsys-replace.sh  new-subsys.sh  run-local.sh  subsysnames  target.sh
.cargo/: config.toml
install/: debug-winter.in  ld-lilium.so.conf.in  ld.so.conf.in  winter-lily.in  wl-dev.in
install/scripts/: libusi-X.so.in
module-lib-templ/: Cargo.toml.in
module-lib-templ/src/: lib.rs
tests/x86_64/: build.sh  lilium-hello  lilium-hello.as  print-argv  print-argv.as
tools/: musl-gcc
wl-helpers/: Cargo.toml
wl-helpers/src/: detect.rs  lib.rs  rand.rs  sync.rs
wl-helpers/src/detect/: x86.rs
wl-impl/: Cargo.toml  build.rs
wl-impl/c/signal_support/: x86_64.c
wl-impl/c/signal_support/include/: signal.h
wl-impl/c/signal_support/include/x86_64/: setjmp.h
wl-impl/src/: alloc.rs  catch_signals.rs  eh.rs  env.rs  global.rs  handle_base.rs  helpers.rs  lib.rs  libc.rs  ministd.rs  panic.rs  rand.rs  syscall_handler.rs  syscall_helpers.rs  thread.rs
wl-impl/src/global/: malloc.rs
wl-impl/src/helpers/: rt_impls.rs  strexcept.rs
wl-impl/src/libc/: libc_defs.rs
wl-impl/src/ministd/: raw_mutex.rs
wl-interface-map/: Cargo.toml
wl-interface-map/src/: lib.rs
wl-ld-lilium/: Cargo.toml  build.rs  x86_64.ld
wl-ld-lilium/.cargo/: config.toml
wl-ld-lilium/src/: auxv.rs  entry.rs  env.rs  helpers.rs  iface.rs  io.rs  ldso.rs  lib.rs  loader.rs  resolver.rs
wl-ld-lilium/src/detect/: x86.rs
wl-ld-lilium/src/entry/: x86_64.rs
wl-native-subsys/: errnum.knum  native.knum  sysinfo.knum
wl-usi-base/: Cargo.toml  build.rs
wl-usi-base/src/: except.rs  info.rs  lib.rs
wl-usi-debug/: Cargo.toml
wl-usi-debug/src/: lib.rs
wl-usi-io/: Cargo.toml
wl-usi-io/src/: basic.rs  dev.rs  fs.rs  hdl_impl.rs  lib.rs  poll.rs
wl-usi-kmgmt/: Cargo.toml
wl-usi-kmgmt/src/: lib.rs
wl-usi-process/: Cargo.toml
wl-usi-process/src/: exit.rs  lib.rs  mem.rs  proc.rs
wl-usi-thread/: Cargo.toml
wl-usi-thread/src/: event.rs  exit.rs  lib.rs
