[workspace]
members = ["wl-impl", "wl-usi-base", "wl-usi-io"]
exclude = ["wl-ld-lilium"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
lilium-sys = { git = "https://github.com/LiliumOS/lilium-sys.git", default-features = false, features = [
    "std",
    "error-enum",
    "bytemuck",
    "core-subsys",
    "uuid-crate",
] }
bytemuck = { version = "1.21.0", features = ["latest_stable_rust"] }
wl-impl = { path = "wl-impl", version = "0.1.0" }
linux-syscall = "1.0.0"
cfg-match = "0.2.1"
libc = "0.2.169"
