[package]
name = "wl-helpers"
edition.workspace = true
version.workspace = true

[dependencies]
linux-raw-sys = { version = "0.9.3", default-features = false, features = [
    "general",
    "no_std",
] }
linux-syscall = "1.0.0"
lccc-siphash = { git = "https://github.com/lccc-project/lccc-siphash.git", version = "0.1.0" }
lock_api = "0.4.12"
rustix.workspace = true
