[package]
name = "wl-ld-lilium"
edition.workspace = true
version.workspace = true

[dependencies]
linux-syscall.workspace = true
libc = "0.2.169"
bytemuck.workspace = true
lilium-sys.workspace = true
rand = { version = "0.9.0", default-features = false }
fake-enum = "0.1.4"
ld-so-impl = { path = "ld-so-impl" }
linux-errno = "1.0.1"

[lib]
crate-type = ["cdylib"]
