[package]
name = "wl-ld-lilium"
edition = "2024"
version = "0.1.0"

[dependencies]
linux-syscall = "1.0.0"
bytemuck = { version = "1.21.0", features = ["latest_stable_rust"] }
lilium-sys = { git = "https://github.com/LiliumOS/lilium-sys.git", default-features = false, features = [
    "bytemuck",
] }
fake-enum = "0.1.4"
ld-so-impl = { path = "ld-so-impl", features = ["deny-wx", "tls"] }
linux-errno = "1.0.1"
linux-raw-sys = { version = "0.8.0", default-features = false, features = [
    "general",
    "no_std",
    "prctl",
] }
rustix = { version = "0.38.44", default-features = false, features = [
    "event",
    "fs",
    "io_uring",
    "mm",
    "mount",
    "net",
    "param",
    "pipe",
    "process",
    "pty",
    "rand",
    "runtime",
    "shm",
    "stdio",
    "system",
    "termios",
    "thread",
    "time",
    "linux_4_11",
] }
wl-interface-map = { path = "../wl-interface-map" }
lccc-siphash = { git = "https://github.com/lccc-project/lccc-siphash.git", version = "0.1.0" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
debug = 2
overflow-checks = false
debug-assertions = false

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
