[package]
name = "wl-usi-base"
edition.workspace = true
version.workspace = true
build = "../build-usi-lib.rs"

[dependencies]
lilium-sys.workspace = true
uuid = { version = "1.16.0", features = ["v5"], default-features = false }
wl-impl.workspace = true
wl-helpers.workspace = true
cfg-match.workspace = true

[lib]
crate-type = ["cdylib"]
