[package]
name = "wl-usi-io"
edition.workspace = true
version.workspace = true
build = "../build-usi-lib.rs"

[dependencies]
wl-impl.workspace = true
lilium-sys.workspace = true
linux-syscall.workspace = true
bytemuck.workspace = true
cordyceps = { version = "0.3.3", features = ["alloc"] }
rustix.workspace = true
linux-errno.workspace = true

[lib]
crate-type = ["cdylib"]
